app/k3s-env-application/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k3senv-application-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: k3senv.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3senv-application-svc
                port:
                  number: 80
